--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -34,6 +34,10 @@ services:
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_REGION: ${AWS_REGION}
       AWS_ENDPOINT: ${AWS_ENDPOINT}
+      AWS_COGNITO_USER_POOL_ID: ${AWS_COGNITO_USER_POOL_ID}
+      AWS_COGNITO_CLIENT_ID: ${AWS_COGNITO_CLIENT_ID}
+      AWS_COGNITO_CLIENT_SECRET: ${AWS_COGNITO_CLIENT_SECRET}
+      AWS_COGNITO_ENDPOINT: ${AWS_COGNITO_ENDPOINT}
     depends_on:
       - sample_db
 
