--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,5 +16,10 @@ AWS_SECRET_ACCESS_KEY=sample_secret_access_key
 AWS_REGION=ap-northeast-1
 AWS_ENDPOINT=http://localstack:4566
 
+AWS_COGNITO_USER_POOL_ID=sample
+AWS_COGNITO_CLIENT_ID=sample
+AWS_COGNITO_CLIENT_SECRET=sample
+AWS_COGNITO_ENDPOINT=http://localstack:4566
+
 SWAGGER_EDITOR_PORT=8001
 SWAGGER_UI_PORT=8002
